remove concatenation character

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n"
+    "import re\n",
+    "import networkx as nx"
    ]
   },
   {
@@ -61,18 +62,16 @@
    "metadata": {},
    "source": [
     "### 3. Preprocessing \n",
-    "<P>Remove square brackets and replace it with oring</P>\n",
+    "<P>Remove square brackets and replace it with <b>OR</b>ing</P>\n",
     "<P>Add concatenation character</P>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Add preprocessing functions\n",
-    "\n",
     "def find_square_bracket_ranges(regex):\n",
     "    ranges = []\n",
     "    start = -1\n",
@@ -139,11 +138,6 @@
     "            result += regex[i]\n",
     "    return result\n",
     "\n",
-    "\n",
-    "ff = \"(asjnd[0-9])|(h4d2*|33+as449d|[2-9a-z(az)*])\"\n",
-    "ss = \"BAM[a-dA-D9](ABC)[x-z]?ABC(a)[a-b](FA)(BC)?\"\n",
-    "\n",
-    "\n",
     "def preprocess_regex(regex):\n",
     "    # Preprocess ranges\n",
     "    ranges = find_square_bracket_ranges(regex)\n",
@@ -170,7 +164,7 @@
     "        elif inside_square_brackets and not inserted_expanded_range:\n",
     "            new_regex += expanded_ranges[bracket_count - 1]\n",
     "            inserted_expanded_range = True\n",
-    "    new_regex = insert_concat_symbol(new_regex)\n",
+    "    # new_regex = insert_concat_symbol(new_regex)\n",
     "    print(new_regex)\n",
     "    return new_regex\n"
    ]
@@ -185,31 +179,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[a-d0-9F]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def shunting_yard(input_regex):\n",
     "    # Define precedence\n",
     "    \"\"\"\n",
     "        * : 0 or more repetition\n",
     "        + : 1 or more repetition\n",
-    "        $ : concatenation\n",
+    "        # : concatenation\n",
     "        . : Any single character\n",
     "        | : OR\n",
     "    \"\"\"\n",
     "    precedence = {'*': 5, '+': 4, '?': 3, '.': 2, '|': 1}\n",
     "    \n",
-    "    # Output queue and operator stack\n",
-    "    output = []\n",
+    "    precedence = {\n",
+    "    '*': 6,  # 0 or more repetition\n",
+    "    '+': 5,  # 1 or more repetition\n",
+    "    '?': 4,  # optional (exists or not)\n",
+    "    '#': 3,  # concatenation operator\n",
+    "    '.': 2,  # any single character\n",
+    "    '|': 1   # OR operator\n",
+    "    }\n",
+    "    \n",
+    "    # postfix_output queue and operator stack\n",
+    "    postfix_output = []\n",
     "    stack = []\n",
     "\n",
     "    # Process each character in the input\n",
@@ -220,31 +215,35 @@
     "            stack.append(char)\n",
     "        elif char == ')':\n",
     "            while stack and stack[-1] != '(':\n",
-    "                output.append(stack.pop())\n",
+    "                postfix_output.append(stack.pop())\n",
+    "            # check stack error if ')' is not have openning '('\n",
+    "            if not stack:\n",
+    "                return None\n",
     "            stack.pop()  # Remove the '('\n",
     "        elif char in precedence:\n",
     "            while stack and stack[-1] in precedence and precedence[char] <= precedence[stack[-1]]:\n",
-    "                output.append(stack.pop())\n",
+    "                postfix_output.append(stack.pop())\n",
     "            stack.append(char)\n",
     "        else:\n",
-    "            output.append(char)\n",
+    "            postfix_output.append(char)\n",
     "        i += 1\n",
     "\n",
-    "    # Pop remaining operators from the stack to the output\n",
+    "    # Pop remaining operators from the stack to the postfix_output\n",
     "    while stack:\n",
-    "        output.append(stack.pop())\n",
+    "        # check stack error if there is still '(' in the stack so it won't have a close ')'\n",
+    "        if stack[-1] == '(':\n",
+    "            return None\n",
+    "        postfix_output.append(stack.pop())\n",
     "\n",
-    "    # Return the output as a string\n",
-    "    return ''.join(output)\n",
-    "\n",
-    "print(shunting_yard(input_regex))\n"
+    "    # Return the postfix_output as a string\n",
+    "    return ''.join(postfix_output)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Convert postfix regex to NFA"
+    "### 5. Convert postfix regex to NFA using thomson's rule"
    ]
   },
   {
@@ -252,8 +251,79 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Convert NFA to DFA using subset construction \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Convert to minimized DFA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Visualizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BAM(a|b|c|d|A|B|C|D|9)(ABC)(x|y|z)?ABC(a)(a|b)(FA)(BC)?\n",
+      "BAMab|c|d|A|B|C|D|9|ABCxy|z|ABCaab|FABC??\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
+    "ff = \"(asjnd[0-9])|(h4d2*|33+as449d|[2-9a-z(az)*])\"\n",
+    "ss = \"BAM[a-dA-D9](ABC)[x-z]?ABC(a)[a-b](FA)(BC)?\"\n",
+    "\n",
+    "input_regex = preprocess_regex(ss)\n",
+    "\n",
+    "print(shunting_yard(input_regex))\n",
     "\n"
    ]
   }
