--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -83,6 +83,7 @@
     "            if start != -1:\n",
     "                ranges.append((start, i))\n",
     "                start = -1\n",
+    "                \n",
     "    return ranges\n",
     "\n",
     "\n",
@@ -167,6 +168,57 @@
     "    # new_regex = insert_concat_symbol(new_regex)\n",
     "    print(new_regex)\n",
     "    return new_regex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_regex_2(regex):\n",
+    "    new_regex = \"\"\n",
+    "    skip = -1\n",
+    "    for i, char in enumerate(regex):\n",
+    "        if i <= skip:\n",
+    "            continue\n",
+    "        if char == \"[\":\n",
+    "            end = regex.find(']', i)  # Find the end of the bracketed expression\n",
+    "            if end == -1:\n",
+    "                raise ValueError('Mismatched brackets')  # Raise an error if there is no matching close bracket\n",
+    "            # Handle ranges within the bracketed expression\n",
+    "            bracketed = regex[i+1:end]\n",
+    "            if '-' in bracketed:\n",
+    "                new_bracketed = \"\"\n",
+    "                splited_bracketed = bracketed.split('-')\n",
+    "                for j, _ in enumerate(splited_bracketed):\n",
+    "                    if j + 1 != len(splited_bracketed):\n",
+    "                        range_start = splited_bracketed[j]\n",
+    "                        range_end = splited_bracketed[j + 1]\n",
+    "                        ascii_range = ord(range_end[0]) - ord(range_start[-1])\n",
+    "                        range_symbols = \"\"\n",
+    "                        for k in range(ascii_range):\n",
+    "                            if k != 0:\n",
+    "                                range_symbols += chr(ord(range_start[-1]) + k) + \"|\"\n",
+    "                        if j == 0:\n",
+    "                            len_range_start = len(range_start)\n",
+    "                            for k, ch in enumerate(range_start):\n",
+    "                                if k == len_range_start - 1:\n",
+    "                                    new_bracketed += ch\n",
+    "                                    continue\n",
+    "                                new_bracketed += ch + \"|\"\n",
+    "                        new_bracketed += \"|\" + range_symbols \n",
+    "                        for k, ch in enumerate(range_end):\n",
+    "                            if k == 0:\n",
+    "                                new_bracketed += ch\n",
+    "                                continue\n",
+    "                            new_bracketed += \"|\" + ch\n",
+    "            new_regex += f\"({new_bracketed})\"  # Treat the entire bracketed expression as a single character\n",
+    "            skip = end      # Skip to the end of the bracketed expression\n",
+    "        else:\n",
+    "            new_regex += char\n",
+    "    print(new_regex)\n",
+    "    return new_regex            \n"
    ]
   },
   {
@@ -304,28 +356,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BAM(a|b|c|d|A|B|C|D|9)(ABC)(x|y|z)?ABC(a)(a|b)(FA)(BC)?\n",
-      "BAMab|c|d|A|B|C|D|9|ABCxy|z|ABCaab|FABC??\n"
+      "BAM(a|b|c|d|A|B|C|D|s|7|8|9)(ABC)(x|y|z)?ABC(a)(a|b)(FA)(BC)?\n",
+      "BAMab|c|d|A|B|C|D|s|7|8|9|ABCxy|z|ABCaab|FABC??\n"
      ]
     }
    ],
    "source": [
     "\n",
     "ff = \"(asjnd[0-9])|(h4d2*|33+as449d|[2-9a-z(az)*])\"\n",
-    "ss = \"BAM[a-dA-D9](ABC)[x-z]?ABC(a)[a-b](FA)(BC)?\"\n",
+    "ss = \"BAM[a-dA-Ds7-9](ABC)[x-z]?ABC(a)[a-b](FA)(BC)?\"\n",
     "\n",
-    "input_regex = preprocess_regex(ss)\n",
+    "# input_regex = preprocess_regex(ss)\n",
+    "input_regex = preprocess_regex_2(ss)\n",
     "\n",
     "print(shunting_yard(input_regex))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
