add concatenation character

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "re.compile(r'[a-d0-9F]', re.UNICODE)"
+       "re.compile(r'a?(a|b)*?b', re.UNICODE)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     "CONCAT_SYMBOL = \"#\"\n",
     "\n",
     "\n",
-    "def insert_concat_symbol(regex):\n",
+    "def insert_concat_symbol_2(regex):\n",
     "    result = \"\"\n",
     "    inside_brackets = False\n",
     "    for i in range(len(regex)):\n",
@@ -121,16 +121,10 @@
     "        if (\n",
     "            not inside_brackets\n",
     "            and i < len(regex) - 1\n",
-    "            and regex[i] != \"|\"\n",
-    "            and regex[i + 1] != \"|\"\n",
     "            and regex[i] != \"(\"\n",
     "            # and regex[i + 1] != \"(\"\n",
     "            # and regex[i] != \")\"\n",
     "            and regex[i + 1] != \")\"\n",
-    "            and regex[i] != \"*\"\n",
-    "            and regex[i + 1] != \"*\"\n",
-    "            and regex[i] != \"+\"\n",
-    "            and regex[i + 1] != \"+\"\n",
     "            and regex[i + 1] not in [\"?\", \".\", \"*\", \"|\", \"+\"]\n",
     "            and regex[i] not in [\"?\", \".\", \"*\", \"|\", \"+\"]\n",
     "        ):\n",
@@ -139,7 +133,7 @@
     "            result += regex[i]\n",
     "    return result\n",
     "\n",
-    "def preprocess_regex(regex):\n",
+    "def preprocess_regex_2(regex):\n",
     "    # Preprocess ranges\n",
     "    ranges = find_square_bracket_ranges(regex)\n",
     "    expanded_ranges = []\n",
@@ -165,18 +159,39 @@
     "        elif inside_square_brackets and not inserted_expanded_range:\n",
     "            new_regex += expanded_ranges[bracket_count - 1]\n",
     "            inserted_expanded_range = True\n",
-    "    # new_regex = insert_concat_symbol(new_regex)\n",
+    "    new_regex = insert_concat_symbol_2(new_regex)\n",
     "    print(new_regex)\n",
     "    return new_regex\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_regex_2(regex):\n",
+    "\n",
+    "CONCAT_SYMBOL = \"#\"\n",
+    "\n",
+    "\n",
+    "def insert_concat_symbol(regex):\n",
+    "    result = \"\"\n",
+    "    operators = [\"?\", \".\", \"*\", \"|\", \"+\"]\n",
+    "    for i in range(len(regex)):\n",
+    "        if (\n",
+    "            i < len(regex) - 1\n",
+    "            and regex[i + 1] not in operators\n",
+    "            and regex[i] not in operators\n",
+    "            and regex[i] != \"(\"\n",
+    "            and regex[i + 1] != \")\"\n",
+    "        ):\n",
+    "            result += regex[i] + CONCAT_SYMBOL\n",
+    "        else:\n",
+    "            result += regex[i]      \n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def preprocess_regex(regex):\n",
     "    new_regex = \"\"\n",
     "    skip = -1\n",
     "    for i, char in enumerate(regex):\n",
@@ -217,6 +232,7 @@
     "            skip = end      # Skip to the end of the bracketed expression\n",
     "        else:\n",
     "            new_regex += char\n",
+    "    new_regex = insert_concat_symbol(new_regex)        \n",
     "    print(new_regex)\n",
     "    return new_regex            \n"
    ]
@@ -231,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,37 +271,37 @@
     "    '|': 1   # OR operator\n",
     "    }\n",
     "    \n",
-    "    # postfix_output queue and operator stack\n",
+    "    # postfix_output queue and operator operator_stack\n",
     "    postfix_output = []\n",
-    "    stack = []\n",
+    "    operator_stack = []\n",
     "\n",
     "    # Process each character in the input\n",
     "    i = 0\n",
     "    while i < len(input_regex):\n",
     "        char = input_regex[i]\n",
     "        if char == '(':\n",
-    "            stack.append(char)\n",
+    "            operator_stack.append(char)\n",
     "        elif char == ')':\n",
-    "            while stack and stack[-1] != '(':\n",
-    "                postfix_output.append(stack.pop())\n",
-    "            # check stack error if ')' is not have openning '('\n",
-    "            if not stack:\n",
+    "            while operator_stack and operator_stack[-1] != '(':\n",
+    "                postfix_output.append(operator_stack.pop())\n",
+    "            # check operator_stack error if ')' is not have openning '('\n",
+    "            if not operator_stack:\n",
     "                return None\n",
-    "            stack.pop()  # Remove the '('\n",
+    "            operator_stack.pop()  # Remove the '('\n",
     "        elif char in precedence:\n",
-    "            while stack and stack[-1] in precedence and precedence[char] <= precedence[stack[-1]]:\n",
-    "                postfix_output.append(stack.pop())\n",
-    "            stack.append(char)\n",
+    "            while operator_stack and operator_stack[-1] in precedence and precedence[char] <= precedence[operator_stack[-1]]:\n",
+    "                postfix_output.append(operator_stack.pop())\n",
+    "            operator_stack.append(char)\n",
     "        else:\n",
     "            postfix_output.append(char)\n",
     "        i += 1\n",
     "\n",
-    "    # Pop remaining operators from the stack to the postfix_output\n",
-    "    while stack:\n",
-    "        # check stack error if there is still '(' in the stack so it won't have a close ')'\n",
-    "        if stack[-1] == '(':\n",
+    "    # Pop remaining operators from the operator_stack to the postfix_output\n",
+    "    while operator_stack:\n",
+    "        # check operator_stack error if there is still '(' in the operator_stack so it won't have a close ')'\n",
+    "        if operator_stack[-1] == '(':\n",
     "            return None\n",
-    "        postfix_output.append(stack.pop())\n",
+    "        postfix_output.append(operator_stack.pop())\n",
     "\n",
     "    # Return the postfix_output as a string\n",
     "    return ''.join(postfix_output)\n"
@@ -337,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Visualizations"
+    "### 8. Visualizations Graphiz"
    ]
   },
   {
@@ -356,25 +372,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BAM(a|b|c|d|A|B|C|D|s|7|8|9)(ABC)(x|y|z)?ABC(a)(a|b)(FA)(BC)?\n",
-      "BAMab|c|d|A|B|C|D|s|7|8|9|ABCxy|z|ABCaab|FABC??\n"
+      "B#A#M#(a|b|c|d|A|B|C|D|s|7|8|9)#(A#B#C)#(x|y|z)?A#B#C#(a)#(a|b)#(F#A)#(B#C)?\n",
+      "B#A#M#(a|b|c|d|A|B|C|D|s|7|8|9)#(A#B#C)#(x|y|z)?A#B#C#(a)#(a|b)#(F#A)#(B#C)?\n",
+      "True\n",
+      "BA#M#ab|c|d|A|B|C|D|s|7|8|9|#AB#C##xy|z|A?#B#C#a#ab|#FA##BC#?#\n"
      ]
     }
    ],
    "source": [
     "\n",
+    "\n",
     "ff = \"(asjnd[0-9])|(h4d2*|33+as449d|[2-9a-z(az)*])\"\n",
     "ss = \"BAM[a-dA-Ds7-9](ABC)[x-z]?ABC(a)[a-b](FA)(BC)?\"\n",
     "\n",
-    "# input_regex = preprocess_regex(ss)\n",
-    "input_regex = preprocess_regex_2(ss)\n",
+    "# input_rege = preprocess_regex_2(ss)\n",
+    "input_regex = preprocess_regex(ss)\n",
+    "# print(input_regex == input_rege)\n",
+    "\n",
     "\n",
     "print(shunting_yard(input_regex))\n",
     "\n"
