✅ Implemented converting regex to NFA

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -403,27 +403,21 @@
     "    \"\"\"\n",
     "    nodes_sorted = sorted(G.nodes(), key=lambda x: (isinstance(x, int), x))\n",
     "    starting_state = str(nodes_sorted[0])\n",
-    "    terminating_state = str(nodes_sorted[-1])  # Assuming the last state is the terminating state\n",
-    "    \n",
+    "    terminating_state = str(nodes_sorted[-1])  \n",
     "    graph_dict = {\"startingState\": starting_state}\n",
     "    \n",
     "    for node in sorted(G.nodes(), key=lambda x: (isinstance(x, int), x)):\n",
-    "        # Initialize each node entry with isTerminatingState\n",
     "        node_entry = {\"isTerminatingState\": str(node) == terminating_state}\n",
     "        \n",
-    "        # Initialize an empty dictionary for transitions from this node\n",
     "        transitions = {}\n",
     "        for edge in sorted(G.out_edges(node, data=True), key=lambda e: e[2]['symbol']):\n",
     "            symbol, target_state = edge[2]['symbol'], edge[1]\n",
-    "            # Append the target state to the list for this symbol, or create a new list if necessary\n",
     "            if symbol in transitions:\n",
-    "                # Ensure transitions[symbol] is a list and append the new target state\n",
     "                transitions[symbol] = transitions[symbol] if isinstance(transitions[symbol], list) else [transitions[symbol]]\n",
     "                transitions[symbol].append(str(target_state))\n",
     "            else:\n",
     "                transitions[symbol] = str(target_state)\n",
     "        \n",
-    "        # Sort transitions by symbol and update node entry\n",
     "        node_entry.update({symbol: target if isinstance(target, list) and len(target) > 1 else target[0] if isinstance(target, list) else target \n",
     "                           for symbol, target in sorted(transitions.items(), key=lambda item: item[0])})\n",
     "        \n",
