deal with sqaure brackets by oring ranges with characters

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -73,18 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 477,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new_regex:  (a#s#j#n#d#[0-9])|(h#4#d#2*|3#3+#a#s#4#4#9#d|[2-9a-z(az)*])\n",
-      "(a#s#j#n#d#[0-9])|(h#4#d#2*|3#3+#a#s#4#4#9#d|[2-9a-z(az)*])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "CONCAT_SYMBOL = \"#\"\n",
@@ -126,9 +117,30 @@
     "                raise ValueError('Mismatched | operator')\n",
     "            if char in operators and not i > 0:\n",
     "                raise ValueError('Mismatched operator')\n",
+    "            \n",
+    "def inset_range_bracket_oring(regex):\n",
+    "    result = \"\"\n",
+    "    inside_bracket_ranges = False\n",
+    "    for i, char in enumerate(regex):\n",
+    "        if char == \"[\":\n",
+    "            inside_bracket_ranges = True\n",
+    "            result += char\n",
+    "        elif char == \"]\":\n",
+    "            inside_bracket_ranges = False\n",
+    "            result += char\n",
+    "        elif inside_bracket_ranges:\n",
+    "            if not (char == \"-\" or (i < len(regex) - 1 and (regex[i + 1] == '-' or regex[i + 1] == ']'))):    \n",
+    "                result += char + \"|\"\n",
+    "            else:\n",
+    "                result += char \n",
+    "        else:\n",
+    "            result += char   \n",
+    "    return result                             \n",
     "\n",
     "def preprocess_regex(regex):\n",
+    "    # Check if the regex has valid operators\n",
     "    check_operator_error(regex)\n",
+    "    \n",
     "    # new_regex = \"\"\n",
     "    # skip = -1\n",
     "    # for i, char in enumerate(regex):\n",
@@ -172,9 +184,13 @@
     "    #         skip = end      # Skip to the end of the bracketed expression\n",
     "    #     else:\n",
     "    #         new_regex += char\n",
-    "    new_regex = insert_concat_symbol(regex)        \n",
+    "    \n",
+    "    # insert original symbol to square bracket elements\n",
+    "    new_regex = inset_range_bracket_oring(regex)\n",
+    "    # insert concat symbol\n",
+    "    new_regex = insert_concat_symbol(new_regex)        \n",
     "    print(\"new_regex: \", new_regex)\n",
-    "    return new_regex    \n"
+    "    return new_regex    "
    ]
   },
   {
@@ -187,9 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 479,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new_regex:  [0-5|c|z|a-b|n|5]\n",
+      "0-5c|z|a-b|n|5|\n"
+     ]
+    }
+   ],
    "source": [
     "def shunting_yard(input_regex):\n",
     "    # Define precedence\n",
@@ -255,7 +280,7 @@
     "        elif char in precedence:\n",
     "            while operator_stack and operator_stack[-1] in precedence and precedence[char] <= precedence[operator_stack[-1]]:\n",
     "                postfix_output.append(operator_stack.pop())\n",
-    "            operator_stack.append(char)\n",
+    "            operator_stack.append(char)  \n",
     "        else:\n",
     "            postfix_output.append(char)\n",
     "        i += 1\n",
@@ -273,7 +298,8 @@
     "\n",
     "    # Return the postfix_output as a string\n",
     "    return ''.join(postfix_output)\n",
-    "\n"
+    "\n",
+    "# print(shunting_yard(preprocess_regex(\"[0-5cza-bn5]\")))"
    ]
   },
   {
@@ -285,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [
     {
@@ -743,26 +769,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ace\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'new_bracketed' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[415], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m te \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mab[ace]0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# input_rege = preprocess_regex_2(ss)\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m input_regex \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess_regex\u001b[49m\u001b[43m(\u001b[49m\u001b[43mte\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(shunting_yard(input_regex))\n",
-      "Cell \u001b[1;32mIn[412], line 61\u001b[0m, in \u001b[0;36mpreprocess_regex\u001b[1;34m(regex)\u001b[0m\n\u001b[0;32m     59\u001b[0m                         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m     60\u001b[0m                     new_bracketed \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m|\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m ch\n\u001b[1;32m---> 61\u001b[0m     new_regex \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_bracketed\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# Treat the entire bracketed expression as a single character\u001b[39;00m\n\u001b[0;32m     62\u001b[0m     skip \u001b[38;5;241m=\u001b[39m end      \u001b[38;5;66;03m# Skip to the end of the bracketed expression\u001b[39;00m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'new_bracketed' referenced before assignment"
+      "new_regex:  a#b#[a|c|e]#0\n",
+      "ab#ac|e|#0#\n"
      ]
     }
    ],
